# pik-review-player

./: .gitignore  CHANGES.md  LICENSE  PROFESSIONAL-PLAYER-PROMPT.md  PikPlayer-AGENTS.md  PikPlayer-HANDOFF.md  PikPlayer-PLAN.md  PikPlayer-TASKS.md  PikReview-HANDOFF.md  PikReview-PLAN.md  PikReview-TASKS.md  add_db_methods.py  index.html  modify_app.py  modify_notes_panel.py  package-lock.json  package.json  pik-player-planning-notes.md  tsconfig.json  vite.config.ts
.cargo/: config.toml
.hermes/: plan-p1-mpv.md
canvas/: cowart-selection.json  cowart-view-state.json
canvas/pages/page/: cowart-canvas.json
sketches/pik-player-colors/: index.html
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  add_lib_commands.py  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/database/: mod.rs
src-tauri/src/player/: atmos.rs  atmos_wrapper.m  eq.rs  mod.rs  mpv.rs  playback.rs
src-tauri/src/scanner/: mod.rs  watcher.rs
src/components/: AlbumGrid.tsx  FilterRow.tsx  NotesPanel.tsx  PlayerBar.tsx  SearchBox.tsx  Sidebar.tsx  SpeakerRoom.tsx
src/stores/: notesStore.ts
src/styles/: theme.css
